# guitar_project

./: .gitignore  Dockerfile  Procfile  auth.py  check_blank.py  config.py  database.py  debug_audio.py  main.py  nixpacks.toml  package.json  payments.py  pitch_reader.py  railpack.toml  requirements.txt  ws_server.py  wsgi.py
ToneCoach/: CMakeLists.txt  ToneCoach.jucer
ToneCoach/Source/: DebugLogger.h  Main.cpp  MainComponent.cpp  MainComponent.h  WebSocketSender.h
analysis/: accuracy.py  error_detection.py  timing.py
api/: server.py  yt.py
audio/: engine.py  recorder.py  ring_buffer.py
dsp/: amplitude.py  aubio_notes.py  basic_pitch_notes.py  librosa_notes.py  note_utils.py  onset.py  pitch.py
feedback/: ai_coach.py  engine.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  PerformanceChart.jsx  ProfilePage.css  ProfilePage.jsx  index.css  main.jsx
frontend/src/components/: AppPanels.jsx  CalibrationModal.jsx  FeedbackGrid.jsx  PlaybackTimeline.jsx
frontend/src/utils/: calibrate.js  detectNotes.js
instance/: app.db
tests/: test_accuracy.py  test_feedback.py  test_onset.py  test_pitch.py  test_timing.py
ui/: server.py
ui/static/: app.js  index.html  style.css
